--- a/sys/pic32/duinomite/Makefile
+++ b/sys/pic32/duinomite/Makefile
@@ -3,7 +3,12 @@ PARAM += -DPIC32MX7
 PARAM += -DUARTUSB_ENABLED
 PARAM += -DSPI3_ENABLED
 PARAM += -DSD_ENABLED
-PARAM += -DGPIO_ENABLED
+PARAM += -DGPIO1_ENABLED
+PARAM += -DGPIO2_ENABLED
+PARAM += -DGPIO3_ENABLED
+PARAM += -DGPIO4_ENABLED
+PARAM += -DGPIO5_ENABLED
+PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DSD0_ENA_PIN=13
