--- a/sys/pic32/duinomite/Config
+++ b/sys/pic32/duinomite/Config
@@ -54,7 +54,15 @@ options         "SD0_ENA_PORT=TRISB"        # for SD enable...      TODO: delete
 options         "SD0_ENA_PIN=13"            # ...use pin RB13       TODO: delete
 
 # General purpose I/O ports
-device          gpio
+# Flags define a mask of available pins
+# The following pins excluded:
+#   RD1, RD2, RD3, RD5, RB13 - spi3, SD card
+device          gpio1   flags 0xdfff    # port B
+device          gpio2   flags 0xf000    # port C
+device          gpio3   flags 0x0fd1    # port D
+device          gpio4   flags 0x00ff    # port E
+device          gpio5   flags 0x003b    # port F
+device          gpio6   flags 0x03cc    # port G
 
 # ADC driver
 device          adc
