--- a/sys/pic32/max32/Config
+++ b/sys/pic32/max32/Config
@@ -31,9 +31,9 @@ config          unix    root on sd0a
                         swap on sd0b
 
 # Serial UART ports
+# Cannot use uart3, as it conflicts with spi2
 device          uart1                       # Serial-to-USB converter
 device          uart2
-device          uart3
 device          uart4
 
 # Console options
@@ -50,7 +50,19 @@ options         "SD0_CS_PORT=TRISC"         # for chip select...    TODO: use fl
 options         "SD0_CS_PIN=14"             # ...use pin RC14       TODO: use flags
 
 # General purpose I/O ports
-device          gpio
+# Flags define a mask of available pins
+# The following pins excluded:
+#   RF2, RF8            - uart1
+#   RF4, RF5            - uart2
+#   RD14, RD15          - uart4
+#   RG6, RG7, RG8, RC14 - spi2, SD card
+device          gpio0   flags 0xc6ff    # port A
+device          gpio1   flags 0xffff    # port B
+device          gpio2   flags 0xb01e    # port C
+device          gpio3   flags 0x3fff    # port D
+device          gpio4   flags 0x03ff    # port E
+device          gpio5   flags 0x300b    # port F
+device          gpio6   flags 0xf20f    # port G
 
 # ADC driver
 device          adc
