--- a/sys/pic32/maximite-color/Config
+++ b/sys/pic32/maximite-color/Config
@@ -51,7 +51,15 @@ options         "SD0_CS_PORT=TRISA"         # for chip select...    TODO: delete
 options         "SD0_CS_PIN=1"              # ...use pin RA1        TODO: delete
 
 # General purpose I/O ports
-device          gpio
+# The following pins excluded:
+#   RF4, RF5, RD10, RA1 - spi4, SD card
+device          gpio0   flags 0xc6fd    # port A
+device          gpio1   flags 0xffff    # port B
+device          gpio2   flags 0xf01e    # port C
+device          gpio3   flags 0xfbff    # port D
+device          gpio4   flags 0x03ff    # port E
+device          gpio5   flags 0x310f    # port F
+device          gpio6   flags 0xf3cf    # port G
 
 # ADC driver
 device          adc
