--- a/sys/pic32/maximite/Config
+++ b/sys/pic32/maximite/Config
@@ -52,7 +52,16 @@ options         "SD0_CS_PORT=TRISE"         # for chip select...    TODO: delete
 options         "SD0_CS_PIN=0"              # ...use pin RE0        TODO: delete
 
 # General purpose I/O ports
-device          gpio
+# Flags define a mask of available pins
+# The following pins excluded:
+#   RF4, RF5, RD10, RE0 - spi4, SD card
+device          gpio0   flags 0xc6ff    # port A
+device          gpio1   flags 0xffff    # port B
+device          gpio2   flags 0xf01e    # port C
+device          gpio3   flags 0xfbff    # port D
+device          gpio4   flags 0x03fe    # port E
+device          gpio5   flags 0x310f    # port F
+device          gpio6   flags 0xf3cf    # port G
 
 # ADC driver
 device          adc
