--- a/sys/pic32/picadillo/Makefile
+++ b/sys/pic32/picadillo/Makefile
@@ -3,7 +3,6 @@ PARAM += -DPIC32MX7
 PARAM += -DUART1_ENABLED
 PARAM += -DSPI2_ENABLED
 PARAM += -DSD_ENABLED
-PARAM += -DGPIO_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DHXTFT_ENABLED
@@ -59,9 +58,8 @@ OBJS = exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o \
 	ufs_bio.o ufs_bmap.o ufs_dsort.o ufs_fio.o ufs_inode.o \
 	ufs_mount.o ufs_namei.o ufs_subr.o ufs_syscalls.o \
 	ufs_syscalls2.o vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o adc.o \
-	clock.o cons.o devsw.o exception.o gpio.o hx8357.o machdep.o \
-	mem.o pwm.o rd_sd.o signal.o spi.o spi_bus.o swap.o sysctl.o \
-	uart.o 
+	clock.o cons.o devsw.o exception.o hx8357.o machdep.o mem.o \
+	pwm.o rd_sd.o signal.o spi.o spi_bus.o swap.o sysctl.o uart.o 
 
 CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/exec_script.c $S/kernel/exec_subr.c \
@@ -85,10 +83,10 @@ CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/vfs_vnops.c $S/kernel/vm_sched.c $S/kernel/vm_swap.c \
 	$S/kernel/vm_swp.c $S/pic32/adc.c $S/pic32/clock.c \
 	$S/pic32/cons.c $S/pic32/devsw.c $S/pic32/exception.c \
-	$S/pic32/gpio.c $S/pic32/hx8357.c $S/pic32/machdep.c \
-	$S/pic32/mem.c $S/pic32/pwm.c $S/pic32/rd_sd.c $S/pic32/signal.c \
-	$S/pic32/spi.c $S/pic32/spi_bus.c $S/pic32/swap.c \
-	$S/pic32/sysctl.c $S/pic32/uart.c swapunix.c 
+	$S/pic32/hx8357.c $S/pic32/machdep.c $S/pic32/mem.c \
+	$S/pic32/pwm.c $S/pic32/rd_sd.c $S/pic32/signal.c $S/pic32/spi.c \
+	$S/pic32/spi_bus.c $S/pic32/swap.c $S/pic32/sysctl.c \
+	$S/pic32/uart.c swapunix.c 
 
 # load lines for config "xxx" will be emitted as:
 # xxx: ${SYSTEM_DEP} swapxxx.o
@@ -309,9 +307,6 @@ devsw.o: $S/pic32/devsw.c
 	${COMPILE_C}
 
 exception.o: $S/pic32/exception.c
-	${COMPILE_C}
-
-gpio.o: $S/pic32/gpio.c
 	${COMPILE_C}
 
 hx8357.o: $S/pic32/hx8357.c
