--- a/sys/pic32/sdxl/Config
+++ b/sys/pic32/sdxl/Config
@@ -44,13 +44,21 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi2                        # SD card
 
 # microSD card
-device          sd0     at spi2 pin RG9     # select pin RG9
+device          sd0     at spi2 pin RG9     # select pin
 options         "SD0_PORT=2"                # sd0 at spi2           TODO: delete
 options         "SD0_CS_PORT=TRISG"         # for chip select...    TODO: delete
 options         "SD0_CS_PIN=9"              # ...use pin RA9        TODO: delete
 
 # General purpose I/O ports
-device          gpio
+# Flags define a mask of available pins
+# The following pins excluded:
+#   RG6, RG7, RG8, RG9 - spi2, SD card
+device          gpio1   flags 0xffff    # port B
+device          gpio2   flags 0xf000    # port C
+device          gpio3   flags 0x0fff    # port D
+device          gpio4   flags 0x00ff    # port E
+device          gpio5   flags 0x003b    # port F
+device          gpio6   flags 0x000c    # port G
 
 # ADC driver
 device          adc
