--- a/sys/pic32/starter-kit/Config
+++ b/sys/pic32/starter-kit/Config
@@ -51,7 +51,16 @@ options         "SD0_CS_PORT=TRISB"         # for chip select...    TODO: delete
 options         "SD0_CS_PIN=1"              # ...use pin RB1        TODO: delete
 
 # General purpose I/O ports
-device          gpio
+# Flags define a mask of available pins
+# The following pins excluded:
+#   RC4, RD0, RD10, RB1 - spi1, SD card
+device          gpio0   flags 0xc6ff    # port A
+device          gpio1   flags 0xfffd    # port B
+device          gpio2   flags 0xf00e    # port C
+device          gpio3   flags 0xfbfe    # port D
+device          gpio4   flags 0x03ff    # port E
+device          gpio5   flags 0x313f    # port F
+device          gpio6   flags 0xf3cf    # port G
 
 # ADC driver
 device          adc
