--- a/sys/pic32/starter-kit/Makefile
+++ b/sys/pic32/starter-kit/Makefile
@@ -4,6 +4,12 @@ PARAM += -DUARTUSB_ENABLED
 PARAM += -DSPI1_ENABLED
 PARAM += -DSD_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DGPIO1_ENABLED
+PARAM += -DGPIO2_ENABLED
+PARAM += -DGPIO3_ENABLED
+PARAM += -DGPIO4_ENABLED
+PARAM += -DGPIO5_ENABLED
+PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DSD0_CS_PIN=1
