--- a/sys/pic32/ubw32/Makefile
+++ b/sys/pic32/ubw32/Makefile
@@ -5,6 +5,12 @@ PARAM += -DSPI1_ENABLED
 PARAM += -DSD_ENABLED
 PARAM += -DSD1_ENABLED
 PARAM += -DGPIO_ENABLED
+PARAM += -DGPIO1_ENABLED
+PARAM += -DGPIO2_ENABLED
+PARAM += -DGPIO3_ENABLED
+PARAM += -DGPIO4_ENABLED
+PARAM += -DGPIO5_ENABLED
+PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DSD1_CS_PIN=10
