--- a/sys/pic32/32mxsdram/Makefile
+++ b/sys/pic32/32mxsdram/Makefile
@@ -6,24 +6,19 @@ PARAM += -DSD_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DSDRAMP_ENABLED
+PARAM += -DSD0_ENA_PORT=TRISB -DSD0_ENA_PIN=13
+PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=14
+PARAM += -DLED_SWAP_PORT=TRISC -DLED_SWAP_PIN=14
+PARAM += -DLED_DISK_PORT=TRISC -DLED_DISK_PIN=13
+PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=15
 PARAM += -DNMOUNT=3
 PARAM += -DPARTITION='sdramp0:sa@2048,fs@14000'
 PARAM += -DKERNEL_EXECUTABLE_RAM
-PARAM += -DSD0_ENA_PIN=13
-PARAM += -DSD0_ENA_PORT=TRISB
 PARAM += -DSD0_CS_PIN=3
 PARAM += -DSD0_CS_PORT=TRISF
 PARAM += -DSD0_PORT=4
 PARAM += -DSD0_MHZ=10
 PARAM += -DCONSOLE_DEVICE=tty2
-PARAM += -DLED_TTY_PIN=14
-PARAM += -DLED_TTY_PORT=TRISA
-PARAM += -DLED_SWAP_PIN=14
-PARAM += -DLED_SWAP_PORT=TRISC
-PARAM += -DLED_DISK_PIN=13
-PARAM += -DLED_DISK_PORT=TRISC
-PARAM += -DLED_KERNEL_PIN=15
-PARAM += -DLED_KERNEL_PORT=TRISA
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
