--- a/sys/pic32/baremetal/Makefile
+++ b/sys/pic32/baremetal/Makefile
@@ -3,17 +3,14 @@ PARAM += -DPIC32MX7
 PARAM += -DUART1_ENABLED
 PARAM += -DSPI2_ENABLED
 PARAM += -DSD_ENABLED
+PARAM += -DLED_TTY_PORT=TRISD -DLED_TTY_PIN=12
+PARAM += -DLED_DISK_PORT=TRISD -DLED_DISK_PIN=2
+PARAM += -DLED_KERNEL_PORT=TRISD -DLED_KERNEL_PIN=3
 PARAM += -DSD0_CS_PIN=1
 PARAM += -DSD0_CS_PORT=TRISD
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=16
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DLED_TTY_PIN=12
-PARAM += -DLED_TTY_PORT=TRISD
-PARAM += -DLED_DISK_PIN=2
-PARAM += -DLED_DISK_PORT=TRISD
-PARAM += -DLED_KERNEL_PIN=3
-PARAM += -DLED_KERNEL_PORT=TRISD
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
