--- a/sys/pic32/duinomite/Makefile
+++ b/sys/pic32/duinomite/Makefile
@@ -11,18 +11,15 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
-PARAM += -DSD0_ENA_PIN=13
-PARAM += -DSD0_ENA_PORT=TRISB
+PARAM += -DSD0_ENA_PORT=TRISB -DSD0_ENA_PIN=13
+PARAM += -DLED_DISK_PORT=TRISB -DLED_DISK_PIN=12
+PARAM += -DLED_KERNEL_PORT=TRISB -DLED_KERNEL_PIN=15
 PARAM += -DSD0_CS_PIN=5
 PARAM += -DSD0_CS_PORT=TRISD
 PARAM += -DSD0_PORT=3
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_DISK_PIN=12
-PARAM += -DLED_DISK_PORT=TRISB
-PARAM += -DLED_KERNEL_PIN=15
-PARAM += -DLED_KERNEL_PORT=TRISB
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
