--- a/sys/pic32/explorer16/Config
+++ b/sys/pic32/explorer16/Config
@@ -22,15 +22,11 @@ options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
-# LED
-options         "LED_DISK_PORT=TRISA"       # for disk activity LED...
-options         "LED_DISK_PIN=0"            # ...use pin RA0
-options         "LED_KERNEL_PORT=TRISA"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=1"          # ...use pin RA1
-options         "LED_TTY_PORT=TRISA"        # for serial activity LED...
-options         "LED_TTY_PIN=2"             # ...use pin RA2
-options         "LED_SWAP_PORT=TRISA"       # for swap activity LED...
-options         "LED_SWAP_PIN=3"            # ...use pin RA3
+# LEDs
+signal          "LED_DISK"      pin RA0     # disk activity indicator
+signal          "LED_KERNEL"    pin RA1     # kernel activity indicator
+signal          "LED_TTY"       pin RA2     # tty activity indicator
+signal          "LED_SWAP"      pin RA3     # swap activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
