--- a/sys/pic32/explorer16/Makefile
+++ b/sys/pic32/explorer16/Makefile
@@ -12,19 +12,15 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DLED_SWAP_PORT=TRISA -DLED_SWAP_PIN=3
+PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=2
+PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=1
+PARAM += -DLED_DISK_PORT=TRISA -DLED_DISK_PIN=0
 PARAM += -DSD0_CS_PIN=1
 PARAM += -DSD0_CS_PORT=TRISB
 PARAM += -DSD0_PORT=1
 PARAM += -DSD0_MHZ=10
 PARAM += -DCONSOLE_DEVICE=tty1
-PARAM += -DLED_SWAP_PIN=3
-PARAM += -DLED_SWAP_PORT=TRISA
-PARAM += -DLED_TTY_PIN=2
-PARAM += -DLED_TTY_PORT=TRISA
-PARAM += -DLED_KERNEL_PIN=1
-PARAM += -DLED_KERNEL_PORT=TRISA
-PARAM += -DLED_DISK_PIN=0
-PARAM += -DLED_DISK_PORT=TRISA
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
