--- a/sys/pic32/fubarino/Makefile
+++ b/sys/pic32/fubarino/Makefile
@@ -12,14 +12,13 @@ PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
 PARAM += -DGLCD_ENABLED
+PARAM += -DLED_KERNEL_PORT=TRISE -DLED_KERNEL_PIN=5
 PARAM += -DSD0_CS_PIN=9
 PARAM += -DSD0_CS_PORT=TRISG
 PARAM += -DSD0_PORT=2
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_KERNEL_PIN=5
-PARAM += -DLED_KERNEL_PORT=TRISE
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
