--- a/sys/pic32/max32/Makefile
+++ b/sys/pic32/max32/Makefile
@@ -14,13 +14,12 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=3
 PARAM += -DSD0_CS_PIN=14
 PARAM += -DSD0_CS_PORT=TRISC
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=10
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DLED_KERNEL_PIN=3
-PARAM += -DLED_KERNEL_PORT=TRISA
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
