--- a/sys/pic32/maximite/Makefile
+++ b/sys/pic32/maximite/Makefile
@@ -12,17 +12,14 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DLED_DISK_PORT=TRISE -DLED_DISK_PIN=1
+PARAM += -DLED_KERNEL_PORT=TRISF -DLED_KERNEL_PIN=0 -DLED_KERNEL_INVERT
 PARAM += -DSD0_CS_PIN=0
 PARAM += -DSD0_CS_PORT=TRISE
 PARAM += -DSD0_PORT=4
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_DISK_PIN=1
-PARAM += -DLED_DISK_PORT=TRISE
-PARAM += -DLED_KERNEL_INVERT
-PARAM += -DLED_KERNEL_PIN=0
-PARAM += -DLED_KERNEL_PORT=TRISF
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
