--- a/sys/pic32/mmb-mx7/Makefile
+++ b/sys/pic32/mmb-mx7/Makefile
@@ -13,8 +13,10 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
-PARAM += -DGPIO_CLEAR_PIN=2
-PARAM += -DGPIO_CLEAR_PORT=TRISD
+PARAM += -DGPIO_CLEAR_PORT=TRISD -DGPIO_CLEAR_PIN=2
+PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=1 -DLED_TTY_INVERT
+PARAM += -DLED_SWAP_PORT=TRISD -DLED_SWAP_PIN=9 -DLED_SWAP_INVERT
+PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=0 -DLED_KERNEL_INVERT
 PARAM += -DSD0_MHZ=8
 PARAM += -DSD0_CS_PIN=9
 PARAM += -DSD0_CS_PORT=TRISA
@@ -22,15 +24,6 @@ PARAM += -DSD0_PORT=1
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_TTY_INVERT
-PARAM += -DLED_TTY_PIN=1
-PARAM += -DLED_TTY_PORT=TRISA
-PARAM += -DLED_SWAP_INVERT
-PARAM += -DLED_SWAP_PIN=9
-PARAM += -DLED_SWAP_PORT=TRISD
-PARAM += -DLED_KERNEL_INVERT
-PARAM += -DLED_KERNEL_PIN=0
-PARAM += -DLED_KERNEL_PORT=TRISA
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
