--- a/sys/pic32/pinguino-micro/Config
+++ b/sys/pic32/pinguino-micro/Config
@@ -23,9 +23,7 @@ options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
 # LED
-options         "LED_KERNEL_PORT=TRISD"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=1"          # ...use pin RD1
-options         "LED_KERNEL_INVERT"         # ...inverted
+signal          "LED_KERNEL" pin RD1 invert # kernel activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
