--- a/sys/pic32/pinguino-micro/Makefile
+++ b/sys/pic32/pinguino-micro/Makefile
@@ -11,15 +11,13 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DLED_KERNEL_PORT=TRISD -DLED_KERNEL_PIN=1 -DLED_KERNEL_INVERT
 PARAM += -DSD0_CS_PIN=13
 PARAM += -DSD0_CS_PORT=TRISB
 PARAM += -DSD0_PORT=2
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_KERNEL_INVERT
-PARAM += -DLED_KERNEL_PIN=1
-PARAM += -DLED_KERNEL_PORT=TRISD
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
