--- a/sys/pic32/starter-kit/Config
+++ b/sys/pic32/starter-kit/Config
@@ -23,11 +23,9 @@ options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
-# LED
-options         "LED_DISK_PORT=TRISD"       # for disk activity LED...
-options         "LED_DISK_PIN=1"            # ...use pin RD1
-options         "LED_KERNEL_PORT=TRISD"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=2"          # ...use pin RD2
+# LEDs
+signal          "LED_DISK"      pin RD1     # disk activity indicator
+signal          "LED_KERNEL"    pin RD2     # kernel activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
