--- a/sys/pic32/ubw32/Makefile
+++ b/sys/pic32/ubw32/Makefile
@@ -13,6 +13,10 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DLED_TTY_PORT=TRISE -DLED_TTY_PIN=3 -DLED_TTY_INVERT
+PARAM += -DLED_SWAP_PORT=TRISE -DLED_SWAP_PIN=0 -DLED_SWAP_INVERT
+PARAM += -DLED_DISK_PORT=TRISE -DLED_DISK_PIN=1 -DLED_DISK_INVERT
+PARAM += -DLED_KERNEL_PORT=TRISE -DLED_KERNEL_PIN=2 -DLED_KERNEL_INVERT
 PARAM += -DSD1_CS_PIN=10
 PARAM += -DSD1_CS_PORT=TRISA
 PARAM += -DSD1_PORT=1
@@ -22,18 +26,6 @@ PARAM += -DSD0_PORT=1
 PARAM += -DUSB_NUM_STRING_DESCRIPTORS=3
 PARAM += -DUSB_MAX_EP_NUMBER=3
 PARAM += -DCONSOLE_DEVICE=ttyUSB0
-PARAM += -DLED_TTY_INVERT
-PARAM += -DLED_TTY_PIN=3
-PARAM += -DLED_TTY_PORT=TRISE
-PARAM += -DLED_SWAP_INVERT
-PARAM += -DLED_SWAP_PIN=0
-PARAM += -DLED_SWAP_PORT=TRISE
-PARAM += -DLED_DISK_INVERT
-PARAM += -DLED_DISK_PIN=1
-PARAM += -DLED_DISK_PORT=TRISE
-PARAM += -DLED_KERNEL_INVERT
-PARAM += -DLED_KERNEL_PIN=2
-PARAM += -DLED_KERNEL_PORT=TRISE
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
