--- a/sys/pic32/wf32/Makefile
+++ b/sys/pic32/wf32/Makefile
@@ -12,17 +12,14 @@ PARAM += -DGPIO5_ENABLED
 PARAM += -DGPIO6_ENABLED
 PARAM += -DADC_ENABLED
 PARAM += -DPWM_ENABLED
+PARAM += -DLED_TTY_PORT=TRISA -DLED_TTY_PIN=1
+PARAM += -DLED_DISK_PORT=TRISF -DLED_DISK_PIN=0
+PARAM += -DLED_KERNEL_PORT=TRISA -DLED_KERNEL_PIN=0
 PARAM += -DSD0_CS_PIN=4
 PARAM += -DSD0_CS_PORT=TRISD
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=10
 PARAM += -DCONSOLE_DEVICE=tty0
-PARAM += -DLED_TTY_PIN=1
-PARAM += -DLED_TTY_PORT=TRISA
-PARAM += -DLED_DISK_PIN=0
-PARAM += -DLED_DISK_PORT=TRISF
-PARAM += -DLED_KERNEL_PIN=0
-PARAM += -DLED_KERNEL_PORT=TRISA
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
