--- a/sys/pic32/baremetal/Config
+++ b/sys/pic32/baremetal/Config
@@ -22,13 +22,10 @@ options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
-# LED
-options         "LED_KERNEL_PORT=TRISD"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=3"          # ...use pin RD3
-options         "LED_DISK_PORT=TRISD"       # for disk activity LED...
-options         "LED_DISK_PIN=2"            # ...use pin RD2
-options         "LED_TTY_PORT=TRISD"        # for serial activity LED...
-options         "LED_TTY_PIN=12"            # ...use pin RD12
+# LEDs
+signal          "LED_KERNEL"    pin RD3     # kernel activity indicator
+signal          "LED_DISK"      pin RD2     # disk activity indicator
+signal          "LED_TTY"       pin RD12    # tty activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
