--- a/sys/pic32/duinomite/Config
+++ b/sys/pic32/duinomite/Config
@@ -23,11 +23,9 @@ options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
-# LED
-options         "LED_KERNEL_PORT=TRISB"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=15"         # ...use pin RB15
-options         "LED_DISK_PORT=TRISB"       # for disk activity LED...
-options         "LED_DISK_PIN=12"           # ...use pin RB12
+# LEDs
+signal          "LED_KERNEL"    pin RB15    # kernel activity indicator
+signal          "LED_DISK"      pin RB12    # disk activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
@@ -50,8 +48,7 @@ device          sd0     at spi3
 options         "SD0_PORT=3"                # at spi3               TODO: delete
 options         "SD0_CS_PORT=TRISD"         # for chip select...    TODO: delete
 options         "SD0_CS_PIN=5"              # ...use pin RD5        TODO: delete
-options         "SD0_ENA_PORT=TRISB"        # for SD enable...      TODO: delete
-options         "SD0_ENA_PIN=13"            # ...use pin RB13       TODO: delete
+signal          "SD0_ENA"       pin RB13    # SD card enable signal TODO: delete
 
 # General purpose I/O ports
 # Flags define a mask of available pins
