--- a/sys/pic32/maximite-color/Config
+++ b/sys/pic32/maximite-color/Config
@@ -22,12 +22,9 @@ options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
-# LED
-options         "LED_KERNEL_PORT=TRISE"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=0"          # ...use pin RE0...
-options         "LED_KERNEL_INVERT"         # ...inverted
-options         "LED_DISK_PORT=TRISE"       # for disk activity LED...
-options         "LED_DISK_PIN=1"            # ...use pin RE1
+# LEDs
+signal          "LED_KERNEL" pin RE0 invert # kernel activity indicator
+signal          "LED_DISK"   pin RE1        # disk activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
@@ -51,6 +48,7 @@ options         "SD0_CS_PORT=TRISA"         # for chip select...    TODO: delete
 options         "SD0_CS_PIN=1"              # ...use pin RA1        TODO: delete
 
 # General purpose I/O ports
+# Flags define a mask of available pins
 # The following pins excluded:
 #   RF4, RF5, RD10, RA1 - spi4, SD card
 device          gpio0   flags 0xc6fd    # port A
