--- a/sys/pic32/sdxl/Config
+++ b/sys/pic32/sdxl/Config
@@ -25,8 +25,7 @@ options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
 # LED
-options         "LED_KERNEL_PORT=TRISE"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=7"          # ...use pin RE7
+signal          "LED_KERNEL"    pin RE7     # kernel activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
