--- a/sys/pic32/wf32/Config
+++ b/sys/pic32/wf32/Config
@@ -20,13 +20,10 @@ options         "CPU_KHZ=80000"             # Oscillator frequency of CPU core
 options         "BUS_KHZ=80000"             # Frequency of peripheral bus
 options         "BUS_DIV=1"                 # Bus clock divisor 1/2/4/8
 
-# LED
-options         "LED_KERNEL_PORT=TRISA"     # for kernel activity LED...
-options         "LED_KERNEL_PIN=0"          # ...use pin RA3
-options         "LED_DISK_PORT=TRISF"       # for disk activity LED...
-options         "LED_DISK_PIN=0"            # ...use pin RF0
-options         "LED_TTY_PORT=TRISA"        # for serial activity LED...
-options         "LED_TTY_PIN=1"             # ...use pin RA1
+# LEDs
+signal          "LED_KERNEL" pin RA0        # kernel activity indicator
+signal          "LED_DISK"   pin RF0        # disk activity indicator
+signal          "LED_TTY"    pin RA1        # tty activity indicator
 
 # Root filesystem at /dev/sd0a, swap at /dev/sd0b
 config          unix    root on sd0a
