Setup only UARTs, defined in the kernel config file. For console initialization, use options CONS_MAJOR and CONS_MINOR.

--- a/sys/pic32/32mxsdram/Config
+++ b/sys/pic32/32mxsdram/Config
@@ -38,7 +38,8 @@ config          unix    root on sd0a
 device          uart3
 
 # Console options
-options         "CONSOLE_DEVICE=tty2"       # /dev/tty2
+options         "CONS_MAJOR=UART_MAJOR"     # UART device
+options         "CONS_MINOR=2"              # /dev/tty2
 
 # SPI ports
 controller      spi4                        # SD card
