--- a/sys/pic32/32mxsdram/Makefile
+++ b/sys/pic32/32mxsdram/Makefile
@@ -18,7 +18,8 @@ PARAM += -DSD0_CS_PIN=3
 PARAM += -DSD0_CS_PORT=TRISF
 PARAM += -DSD0_PORT=4
 PARAM += -DSD0_MHZ=10
-PARAM += -DCONSOLE_DEVICE=tty2
+PARAM += -DCONS_MINOR=2
+PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
