--- a/sys/pic32/baremetal/Config
+++ b/sys/pic32/baremetal/Config
@@ -35,7 +35,8 @@ config          unix    root on sd0a
 device          uart1
 
 # Console options
-options         "CONSOLE_DEVICE=tty0"       # /dev/tty0
+options         "CONS_MAJOR=UART_MAJOR"     # UART device
+options         "CONS_MINOR=0"              # /dev/tty0
 
 # SPI ports
 controller      spi2                        # SD card
