--- a/sys/pic32/explorer16/Makefile
+++ b/sys/pic32/explorer16/Makefile
@@ -20,7 +20,8 @@ PARAM += -DSD0_CS_PIN=1
 PARAM += -DSD0_CS_PORT=TRISB
 PARAM += -DSD0_PORT=1
 PARAM += -DSD0_MHZ=10
-PARAM += -DCONSOLE_DEVICE=tty1
+PARAM += -DCONS_MINOR=1
+PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
