--- a/sys/pic32/max32/Makefile
+++ b/sys/pic32/max32/Makefile
@@ -19,7 +19,8 @@ PARAM += -DSD0_CS_PIN=14
 PARAM += -DSD0_CS_PORT=TRISC
 PARAM += -DSD0_PORT=2
 PARAM += -DSD0_MHZ=10
-PARAM += -DCONSOLE_DEVICE=tty0
+PARAM += -DCONS_MINOR=0
+PARAM += -DCONS_MAJOR=UART_MAJOR
 PARAM += -DBUS_DIV=1
 PARAM += -DBUS_KHZ=80000
 PARAM += -DCPU_KHZ=80000
