--- a/sys/pic32/picadillo/Config
+++ b/sys/pic32/picadillo/Config
@@ -31,7 +31,8 @@ config          unix    root on sd0a
 device          uart1                       # Serial-to-USB converter
 
 # Console options
-options         "CONSOLE_DEVICE=tty0"       # /dev/tty0
+options         "CONS_MAJOR=UART_MAJOR"     # UART device
+options         "CONS_MINOR=0"              # /dev/tty0
 
 # SPI ports
 controller      spi2                        # SD card
