--- a/sys/pic32/duinomite/Config
+++ b/sys/pic32/duinomite/Config
@@ -43,9 +43,8 @@ options         "USB_NUM_STRING_DESCRIPTORS=3"
 controller      spi3                        # SD card
 
 # microSD card
-device          sd0     at spi3
-                        pins RD5, RB13      # select pin, enable pin
-signal          "SD0_ENA"       pin RB13    # SD card enable signal TODO: delete
+device          sd0     at spi3 pin RD5     # select pin
+signal          "SD0_ENA"       pin RB13    # SD card enable
 
 # General purpose I/O ports
 # Flags define a mask of available pins
