--- a/sys/pic32/sdxl/Makefile
+++ b/sys/pic32/sdxl/Makefile
@@ -58,15 +58,15 @@ OBJS = exec_aout.o exec_conf.o exec_elf.o exec_script.o exec_subr.o \
 	init_main.o init_sysent.o kern_clock.o kern_descrip.o \
 	kern_exec.o kern_exit.o kern_fork.o kern_mman.o kern_proc.o \
 	kern_prot.o kern_prot2.o kern_resource.o kern_sig.o kern_sig2.o \
-	kern_subr.o kern_synch.o kern_sysctl.o kern_time.o rdisk.o \
-	subr_prf.o subr_rmap.o sys_generic.o sys_inode.o sys_pipe.o \
-	sys_process.o syscalls.o tty.o tty_subr.o tty_tty.o ufs_alloc.o \
-	ufs_bio.o ufs_bmap.o ufs_dsort.o ufs_fio.o ufs_inode.o \
-	ufs_mount.o ufs_namei.o ufs_subr.o ufs_syscalls.o \
-	ufs_syscalls2.o vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o \
-	clock.o cons.o devsw.o exception.o machdep.o mem.o signal.o \
-	swap.o sysctl.o adc.o gpio.o pwm.o rd_sd.o spi.o spi_bus.o \
-	uart.o usb_device.o usb_function_cdc.o usb_uart.o 
+	kern_subr.o kern_synch.o kern_sysctl.o kern_time.o subr_prf.o \
+	subr_rmap.o sys_generic.o sys_inode.o sys_pipe.o sys_process.o \
+	syscalls.o tty.o tty_subr.o tty_tty.o ufs_alloc.o ufs_bio.o \
+	ufs_bmap.o ufs_dsort.o ufs_fio.o ufs_inode.o ufs_mount.o \
+	ufs_namei.o ufs_subr.o ufs_syscalls.o ufs_syscalls2.o \
+	vfs_vnops.o vm_sched.o vm_swap.o vm_swp.o clock.o cons.o devsw.o \
+	exception.o machdep.o mem.o signal.o swap.o sysctl.o adc.o \
+	gpio.o pwm.o sd.o spi.o spi_bus.o uart.o usb_device.o \
+	usb_function_cdc.o usb_uart.o 
 
 CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/exec_script.c $S/kernel/exec_subr.c \
@@ -78,13 +78,13 @@ CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/kernel/kern_prot2.c $S/kernel/kern_resource.c \
 	$S/kernel/kern_sig.c $S/kernel/kern_sig2.c $S/kernel/kern_subr.c \
 	$S/kernel/kern_synch.c $S/kernel/kern_sysctl.c \
-	$S/kernel/kern_time.c $S/kernel/rdisk.c $S/kernel/subr_prf.c \
-	$S/kernel/subr_rmap.c $S/kernel/sys_generic.c \
-	$S/kernel/sys_inode.c $S/kernel/sys_pipe.c \
-	$S/kernel/sys_process.c $S/kernel/syscalls.c $S/kernel/tty.c \
-	$S/kernel/tty_subr.c $S/kernel/tty_tty.c $S/kernel/ufs_alloc.c \
-	$S/kernel/ufs_bio.c $S/kernel/ufs_bmap.c $S/kernel/ufs_dsort.c \
-	$S/kernel/ufs_fio.c $S/kernel/ufs_inode.c $S/kernel/ufs_mount.c \
+	$S/kernel/kern_time.c $S/kernel/subr_prf.c $S/kernel/subr_rmap.c \
+	$S/kernel/sys_generic.c $S/kernel/sys_inode.c \
+	$S/kernel/sys_pipe.c $S/kernel/sys_process.c \
+	$S/kernel/syscalls.c $S/kernel/tty.c $S/kernel/tty_subr.c \
+	$S/kernel/tty_tty.c $S/kernel/ufs_alloc.c $S/kernel/ufs_bio.c \
+	$S/kernel/ufs_bmap.c $S/kernel/ufs_dsort.c $S/kernel/ufs_fio.c \
+	$S/kernel/ufs_inode.c $S/kernel/ufs_mount.c \
 	$S/kernel/ufs_namei.c $S/kernel/ufs_subr.c \
 	$S/kernel/ufs_syscalls.c $S/kernel/ufs_syscalls2.c \
 	$S/kernel/vfs_vnops.c $S/kernel/vm_sched.c $S/kernel/vm_swap.c \
@@ -92,9 +92,9 @@ CFILES = $S/kernel/exec_aout.c $S/kernel/exec_conf.c $S/kernel/exec_elf.c \
 	$S/pic32/devsw.c $S/pic32/exception.c $S/pic32/machdep.c \
 	$S/pic32/mem.c $S/pic32/signal.c $S/pic32/swap.c \
 	$S/pic32/sysctl.c $S/pic32/adc.c $S/pic32/gpio.c $S/pic32/pwm.c \
-	$S/pic32/rd_sd.c $S/pic32/spi.c $S/pic32/spi_bus.c \
-	$S/pic32/uart.c $S/pic32/usb_device.c \
-	$S/pic32/usb_function_cdc.c $S/pic32/usb_uart.c swapunix.c 
+	$S/pic32/sd.c $S/pic32/spi.c $S/pic32/spi_bus.c $S/pic32/uart.c \
+	$S/pic32/usb_device.c $S/pic32/usb_function_cdc.c \
+	$S/pic32/usb_uart.c swapunix.c 
 
 # load lines for config "xxx" will be emitted as:
 # xxx: ${SYSTEM_DEP} swapxxx.o
@@ -224,9 +224,6 @@ kern_sysctl.o: $S/kernel/kern_sysctl.c
 kern_time.o: $S/kernel/kern_time.c
 	${COMPILE_C}
 
-rdisk.o: $S/kernel/rdisk.c
-	${COMPILE_C}
-
 subr_prf.o: $S/kernel/subr_prf.c
 	${COMPILE_C}
 
@@ -338,7 +335,7 @@ gpio.o: $S/pic32/gpio.c
 pwm.o: $S/pic32/pwm.c
 	${COMPILE_C}
 
-rd_sd.o: $S/pic32/rd_sd.c
+sd.o: $S/pic32/sd.c
 	${COMPILE_C}
 
 spi.o: $S/pic32/spi.c
