--- a/src/cmd/Makefile
+++ b/src/cmd/Makefile
@@ -11,7 +11,7 @@ CFLAGS          += -Werror
 # Programs that live in subdirectories, and have makefiles of their own.
 # /bin
 SUBDIR		= adb adc-demo aout ar as awk basic calendar cc chflags \
-                  chpass cpp dc devupdate diff emg env fdisk find fold forth \
+                  chpass cpp dc diff emg env fdisk find fold forth \
                   fstat glcdtest hostname id la lcc lcpp ld ls login make \
                   man md5 med more nm passwd pdc picoc portio printf pwm \
                   ranlib re renice retroforth scm sed setty sh sl smallc \
